<resources>
    <string name="app_name">天气助手</string>
    <string name="m_weather">天气</string>
    <string name="m_friends">动态</string>
    <string name="m_daily">日程</string>
    <string name="m_profile">我</string>
    <string name="action_settings">Settings</string>
    <string name="et_password">密码</string>
    <string name="et_register">注册</string>
    <string name="et_login">用户名</string>
    <string name="action_sign_in">注册并登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮件格式错误</string>
    <string name="error_invalid_password">密码大于6位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">这个是必填项</string>
    <string name="title_activity_base">BaseActivity</string>
</resources>
