<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nyy.weatherapp.LoginActivity"
    android:orientation="vertical"
   >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_topbar"
        />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:src="@drawable/ic_launcher_round" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_login"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_password"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/cb_tick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:text="记住用户名和密码" />

        <TextView
            android:id="@+id/ft_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/cb_tick"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:layout_alignTop="@id/cb_tick"
            android:gravity="center_vertical"
            android:text="忘记密码" />
    </RelativeLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/cb_tick"
        android:onClick="login"
        android:text="登  陆"
        android:textSize="18dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/shape"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">
    <View
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="第三方账号登陆"
        android:textColor="@color/colorGray"
        android:gravity="center"/>
        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/colorGray"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="注册用户"
        android:textSize="16dp"
        android:gravity="center"
        android:layout_marginTop="120dp"

        />

</LinearLayout>
</ScrollView>
